Update README with IntelliJ dev instructions